@@ -1,3 +1,6 @@
+2009-09-07 yusuke
+* replace ERP5Report to ERP5Form and ReportBox
+
 2009-04-18 Kazuhiko
 * Version 5.4.1
 
